--- a/Final-Project/pages/about.html
+++ b/Final-Project/pages/about.html
@@ -39,31 +39,20 @@
 
   <!-- Main -->
    <main>
-      <section id="products" class="product-section">
-          <h2>Our Fresh & Frozen Seafood</h2>
-            <div class="product-container">
-            <div class="product-card">
-            <img src="../assets/images/fish.jpg" alt="Fresh Fish">
-            <h3>Fresh Fish</h3>
-            <p>Locally sourced and delivered daily for maximum freshness.</p>
-            <button class="primary-button">View More</button>
-            </div>
-              <div class="product-card">
-                      <img src="../assets/images/squid.jfif" alt="Squid">
-                      <h3>Cephalopod</h3>
-                      <p>Perfectly cleaned and ready for your favorite recipes.</p>
-                      <button class="primary-button">View More</button>
-                    </div>
-                    <div class="product-card">
-                      <img src="../assets/images/Crab.jfif" alt="Crab">
-                      <h3>Shellfish</h3>
-                      <p>Sweet and tender, ideal for a variety of dishes.</p>
-                      <button class="primary-button">View More</button>
-                    </div>
-                  </div>
-                </section>
-      </div>
-    </section>
+    <!-- About Section -->
+    <section id="about-us" class="container">
+      <!-- About Section -->
+<section id="about-us" class="container">
+  <h2>About Us</h2>
+        <p><strong>Welcome to Isdaan ni Lynde!</strong></p>
+        <p>At <em>Isdaan ni Lynde</em>, we are committed to providing the freshest seafood to the people of Cebu. With a focus on <strong>quality</strong> and <strong>sustainability</strong>, we source our seafood directly from the ocean, ensuring that every catch is fresh and of the highest standard.</p>
+        <p>Our <strong>mission</strong> is to connect our customers with the bounty of the sea, providing everything from fish to shellfish, and even <em>cephalopods</em>, all at the peak of freshness.</p>
+        <p>We pride ourselves on being a trusted supplier in the local community and hope to continue delivering delicious, sustainable seafood for years to come. Our goal is to offer you the best seafood, backed by our <strong>dedicated</strong> team and a passion for excellence.</p>
+        <p><strong>Freshness you can trust.</strong></p> <br>
+        <p><strong>Address:</strong><a href="https://www.google.com/maps/@10.2490802,123.9541093,3a,75y,92.49h,64.19t/data=!3m7!1e1!3m5!1so5Mmdec7BrgqvwApHz3j-Q!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D25.80934030086634%26panoid%3Do5Mmdec7BrgqvwApHz3j-Q%26yaw%3D92.49332473633098!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D" target="_blank"> Roro, Cordova, Cebu</a></p>
+        <p><strong>Contact Number: 0950-7707-934 </strong></p>
+</section>
+  </main>
 </main>
 
 <!-- Footer -->
