https://github.com/Lowiski/FinalProject.git

--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -29,8 +29,8 @@
           <a href="../Final-Project/pages/products.html">Products ▼</a>
           <ul class="dropdown-content">
             <li><a href="./pages/fishes.html">Fishes</a></li>
-            <li><a href="#">Shellfish</a></li>
-            <li><a href="#">Cephalopod</a></li>
+            <li><a href="../Final-Project/pages/shellfish.html">Shellfish</a></li>
+            <li><a href="../Final-Project/pages/cephalopod.html">Cephalopod</a></li>
           </ul>
         </li>
         <li><a href="../Final-Project/pages/contact.html">Contacts</a></li> 
@@ -70,19 +70,19 @@
                 <img src="./assets/images/fish.jpg" alt="Fresh Fish">
                 <h3>Fresh Fish</h3>
                 <p>Locally sourced and delivered daily for maximum freshness.</p>
-                <button class="primary-button">View More</button>
+                <a href="./pages/fishes.html"><button class="primary-button">View More</button></a>
               </div>
               <div class="product-card">
                 <img src="./assets/images/squid.jfif" alt="Squid">
                 <h3>Cephalopod</h3>
                 <p>Perfectly cleaned and ready for your favorite recipes.</p>
-                <button class="primary-button">View More</button>
+                <a href="./pages/cephalopod.html"><button class="primary-button">View More</button></a>
               </div>
               <div class="product-card">
                 <img src="./assets/images/Crab.jfif" alt="Crab">
                 <h3>Shellfish</h3>
                 <p>Sweet and tender, ideal for a variety of dishes.</p>
-                <button class="primary-button">View More</button>
+                <a href="./pages/shellfish.html"><button class="primary-button">View More</button></a>
               </div>
             </div>
       </section>
