--- a/Final-Project/pages/fishes.html
+++ b/Final-Project/pages/fishes.html
@@ -27,9 +27,9 @@
         <li class="dropdown">
           <a href="../pages/products.html">Products ▼</a>
           <ul class="dropdown-content">
-            <li><a href="#">Fishes</a></li>
-            <li><a href="#">Shellfish</a></li>
-            <li><a href="#">Cephalopod</a></li>
+            <li><a href="../pages/fishes.html">Fishes</a></li>
+            <li><a href="../pages/shellfish.html">Shellfish</a></li>
+            <li><a href="../pages/cephalopod.html">Cephalopod</a></li>
           </ul>
         </li>
         <li><a href="../pages/contact.html">Contacts</a></li> 
@@ -47,10 +47,11 @@
             <img src="../assets/images/Tulingan.jpg" alt="Tulingan">
             <h3>Tulingan</h3>
             <p>Fresh and flavorful bullet tuna, perfect for sinaing or ginataan.</p>
+            <!-- <a href="../pages/tulingan.html"><button class="primary-button">View Details</button></a> -->
           </div>
     
           <div class="product-card">
-            <img src="../assets/images/bangus.jfif " alt="Bangus">
+            <img src="../assets/images/bangus.jpg " alt="Bangus">
             <h3>Bangus</h3>
             <p>Milkfish known for its tender meat and rich taste.</p>
           </div>
@@ -68,8 +69,8 @@
           </div>
     
           <div class="product-card">
-            <img src="tilapia.jpg" alt="Tilapia">
-            <h3>Tilapia</h3>
+            <img src="../assets/images/Bilong-bilong.jfif" alt="Bilong-bilong">
+            <h3>Bilong-bilong</h3>
             <p>Common table fish that's affordable and versatile in cooking.</p>
           </div>
 
