--- a/Final-Project/pages/about.html
+++ b/Final-Project/pages/about.html
@@ -27,9 +27,9 @@
         <li class="dropdown">
           <a href="../pages/products.html">Products ▼</a>
           <ul class="dropdown-content">
-            <li><a href="#">Fishes</a></li>
-            <li><a href="#">Shellfish</a></li>
-            <li><a href="#">Cephalopod</a></li>
+            <li><a href="../pages/fishes.html">Fishes</a></li>
+            <li><a href="../pages/shellfish.html">Shellfish</a></li>
+            <li><a href="../pages/cephalopod.html">Cephalopod</a></li>
           </ul>
         </li>
         <li><a href="../pages/contact.html">Contacts</a></li> 
