--- a/Final-Project/pages/products.html
+++ b/Final-Project/pages/products.html
@@ -27,9 +27,9 @@
         <li class="dropdown">
           <a href="../pages/products.html">Products ▼</a>
           <ul class="dropdown-content">
-            <li><a href="#">Fishes</a></li>
-            <li><a href="#">Shellfish</a></li>
-            <li><a href="#">Cephalopod</a></li>
+            <li><a href="../pages/fishes.html">Fishes</a></li>
+            <li><a href="../pages/shellfish.html">Shellfish</a></li>
+            <li><a href="../pages/cephalopod.html">Cephalopod</a></li>
           </ul>
         </li>
         <li><a href="../pages/contact.html">Contacts</a></li> 
@@ -46,19 +46,19 @@
             <img src="../assets/images/fish.jpg" alt="Fresh Fish">
             <h3>Fresh Fish</h3>
             <p>Locally sourced and delivered daily for maximum freshness.</p>
-            <button class="primary-button">View More</button>
+            <a><a href="./fishes.html"><button class="primary-button">View More</button></a>
             </div>
               <div class="product-card">
                       <img src="../assets/images/squid.jfif" alt="Squid">
                       <h3>Cephalopod</h3>
                       <p>Perfectly cleaned and ready for your favorite recipes.</p>
-                      <button class="primary-button">View More</button>
+                      <a href="../pages/cephalopod.html"><button class="primary-button">View More</button></a>
                     </div>
                     <div class="product-card">
                       <img src="../assets/images/Crab.jfif" alt="Crab">
                       <h3>Shellfish</h3>
                       <p>Sweet and tender, ideal for a variety of dishes.</p>
-                      <button class="primary-button">View More</button>
+                      <a href="../pages/shellfish.html"><button class="primary-button">View More</button></a>
                     </div>
                   </div>
                 </section>
