https://github.com/Lowiski/FinalProject.git

--- a/Final-Project/pages/products.html
+++ b/Final-Project/pages/products.html
@@ -39,32 +39,41 @@
 
   <!-- Main -->
    <main>
-      <section id="products" class="product-section">
-          <h2>Our Fresh & Frozen Seafood</h2>
-            <div class="product-container">
-            <div class="product-card">
-            <img src="../assets/images/fish.jpg" alt="Fresh Fish">
-            <h3>Fresh Fish</h3>
-            <p>Locally sourced and delivered daily for maximum freshness.</p>
-            <a><a href="./fishes.html"><button class="primary-button">View More</button></a>
-            </div>
-              <div class="product-card">
-                      <img src="../assets/images/squid.jfif" alt="Squid">
-                      <h3>Cephalopod</h3>
-                      <p>Perfectly cleaned and ready for your favorite recipes.</p>
-                      <a href="../pages/cephalopod.html"><button class="primary-button">View More</button></a>
-                    </div>
-                    <div class="product-card">
-                      <img src="../assets/images/Crab.jfif" alt="Crab">
-                      <h3>Shellfish</h3>
-                      <p>Sweet and tender, ideal for a variety of dishes.</p>
-                      <a href="../pages/shellfish.html"><button class="primary-button">View More</button></a>
-                    </div>
-                  </div>
-                </section>
+  <section id="products" class="product-section">
+    <h2>Our Fresh & Frozen Seafood</h2>
+    <div class="product-container">
+
+      <div class="product-card">
+        <img src="../assets/images/fish.jpg" alt="Fresh Fish">
+        <h3>Fresh Fish</h3>
+        <p>Locally sourced and delivered daily for maximum freshness.</p>
+        <a href="./fishes.html">
+          <button class="primary-button">View More</button>
+        </a>
       </div>
-    </section>
+
+      <div class="product-card">
+        <img src="../assets/images/squid.jfif" alt="Squid">
+        <h3>Cephalopod</h3>
+        <p>Perfectly cleaned and ready for your favorite recipes.</p>
+        <a href="../pages/cephalopod.html">
+          <button class="primary-button">View More</button>
+        </a>
+      </div>
+
+      <div class="product-card">
+        <img src="../assets/images/Crab.jfif" alt="Crab">
+        <h3>Shellfish</h3>
+        <p>Sweet and tender, ideal for a variety of dishes.</p>
+        <a href="../pages/shellfish.html">
+          <button class="primary-button">View More</button>
+        </a>
+      </div>
+
+    </div>
+  </section>
 </main>
+
 
 <!-- Footer -->
   <footer>
