--- a/Final-Project/pages/shellfish.html
+++ b/Final-Project/pages/shellfish.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="cntct"><p><strong>Contact Number:</strong>  0950-7707-934</p></div>
+
   <!-- Header -->
   <header id="header">
     <nav class="navbar container">
@@ -47,13 +48,14 @@
             <img src="../assets/images/Crab.jfif" alt="Crab">
             <h3>Crab</h3>
             <p>Fresh, meaty crab perfect for steaming, chili crab, or ginataang alimasag.</p>
-            <!-- <a href="../pages/tulingan.html"><button class="primary-button">View Details</button></a> -->
+            <!-- <a href="../pages/crab.html"><button class="primary-button">View Details</button></a> -->
           </div>
     
           <div class="product-card">
             <img src="../assets/images/shrimp.jfif" alt="Shrimp">
             <h3>Shrimp</h3>
             <p>Juicy, freshly caught shrimp ideal for grilling, sinigang, or tempura..</p>
+            <!-- <a href="../pages/shrimp.html"><button class="primary-button">View Details</button></a> -->
           </div>
     
         </div>
