--- a/Final-Project/pages/thankyou.html
+++ b/Final-Project/pages/thankyou.html
@@ -42,7 +42,7 @@
   <main>
     <section id="thank-you">
       <h1>Thank you for submitting the form.</h1>
-      <a href="../pages/thankyou.html"><button class="primary-button">Go back to Homepage</button></a>
+      <a href="../index.html"><button class="primary-button">Go back to Homepage</button></a>
     </section>
   </main>
 
