--- a/Final-Project/pages/thankyou.html
+++ b/Final-Project/pages/thankyou.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fresh Sea Foods!</title>
+  <title>Isdaan Ni Lynde | Thank You!</title>
   <link rel="icon" href="../assets/images/logo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../assets/styles/style.css">
@@ -40,11 +40,15 @@
  <main>
 <!-- Main Content -->
   <main>
-    <section id="thank-you">
-      <h1>Thank you for submitting the form.</h1>
-      <a href="../index.html"><button class="primary-button">Go back to Homepage</button></a>
-    </section>
-  </main>
+  <section id="thank-you">
+    <h1>Thank You!</h1>
+    <p>Your form has been successfully submitted. We’ll be in touch with you shortly.</p>
+    <a href="../index.html">
+      <button class="primary-button">Return to Homepage</button>
+    </a>
+  </section>
+</main>
+
 
 <!-- Footer -->
   <footer>
