--- a/Final-Project/pages/contact.html
+++ b/Final-Project/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fresh Sea Foods!</title>
+  <title>Isdaan Ni Lynde | Contacts!</title>
   <link rel="icon" href="../assets/images/logo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../assets/styles/style.css">
@@ -80,13 +80,6 @@
           </div>
         </div>
       </section>
-
-     <!-- Form Area -->
-<!-- <section class="form-section">
-  <div class="form-wrapper">
-    <div class="image">
-      <img src="../assets/images/form.pic" alt="Form Image">
-    </div> -->
 
     <section id="form">
       <div class="container form-container">
