--- a/Final-Project/pages/cephalopod.html
+++ b/Final-Project/pages/cephalopod.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fresh Sea Foods!</title>
+  <title>Isdaan Ni Lynde | Cephalopod Products!</title>
   <link rel="icon" href="../assets/images/logo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="../assets/styles/style.css">
