--- a/Final-Project/pages/fishes.html
+++ b/Final-Project/pages/fishes.html
@@ -123,38 +123,44 @@
 </main>
 
 <!-- Footer -->
-  <footer>
-    <div class="footer-container">
-      <div class="footer-section">
-        <h3>Isdaan ni Lynde</h3>
-        <p>Your trusted supplier of fresh & frozen seafood in Cebu.</p>
-        <p><strong>Address:</strong><a href="https://www.google.com/maps/@10.2490802,123.9541093,3a,75y,92.49h,64.19t/data=!3m7!1e1!3m5!1so5Mmdec7BrgqvwApHz3j-Q!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D25.80934030086634%26panoid%3Do5Mmdec7BrgqvwApHz3j-Q%26yaw%3D92.49332473633098!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D" target="_blank"> Roro, Cordova, Cebu</p></a>
-        <p><strong>Phone:</strong> 0950-7707-934 </p>
-        <p><strong>Email:</strong> lynde.ycong@gmail.com</p>
-      </div>
-
-      <div class="footer-section">
-        <h4>Quick Links</h4>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../pages/about.html">About Us</a></li>
-          <li><a href="../pages/products.html">Products</a></li>
-          <li><a href="../pages/contact.html">Contact</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h4>Reach us</h4>
-        <ul>
-          <li><a href="https://www.facebook.com/lynde.pacaldo.ycong" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-          <li><a href="https://www.instagram.com/luvley_laira/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-          <li><a href="https://x.com/Laira_Ngel" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
-        </ul>
-      </div>
+<footer>
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>Isdaan ni Lynde</h3>
+      <p>Your trusted supplier of fresh & frozen seafood in Cebu.</p>
+      <p>
+        <strong>Address:</strong>
+        <a href="https://www.google.com/maps/@10.2490802,123.9541093,3a,75y,92.49h,64.19t/data=!3m7!1e1!3m5!1so5Mmdec7BrgqvwApHz3j-Q!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D25.80934030086634%26panoid%3Do5Mmdec7BrgqvwApHz3j-Q%26yaw%3D92.49332473633098!7i16384!8i8192?entry=ttu&g_ep=EgoyMDI1MDQzMC4xIKXMDSoASAFQAw%3D%3D" target="_blank">
+          Roro, Cordova, Cebu
+        </a>
+      </p>
+      <p><strong>Phone:</strong> 0950-7707-934 </p>
+      <p><strong>Email:</strong> lynde.ycong@gmail.com</p>
     </div>
-    <div class="footer-bottom">
-      <p>&copy; 2025 Isdaan ni Lynde. All rights reserved.</p>
+
+    <div class="footer-section">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../pages/about.html">About Us</a></li>
+        <li><a href="../pages/products.html">Products</a></li>
+        <li><a href="../pages/contact.html">Contact</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-section">
+      <h4>Reach us</h4>
+      <ul>
+        <li><a href="https://www.facebook.com/lynde.pacaldo.ycong" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+        <li><a href="https://www.instagram.com/luvley_laira/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://x.com/Laira_Ngel" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Isdaan ni Lynde. All rights reserved.</p>
+  </div>
+</footer>
 </body>
 </html>
